--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,14 +1,9 @@
-<!--Note: this is a throw away file.. willl be using it for copy pasting into the handlebar files though.... considering
-using bootstrap or using css in public but either way should
-be pretty straight forward once i am there-->
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Forum-Catalog</title>
 	<link rel="stylesheet" type="text/css" href="../../public/assets/css/style.css">
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  GETS IN WAY OF CSS-->
 </head>
 
 	<body id ="bodyBackground" class="forumCatalogPage">
@@ -23,13 +18,24 @@ be pretty straight forward once i am there-->
 				   <a href="/3/catalog" title="Test Board 3">3</a> 
 				   "]"
 				   <div class="boardSelect"> 
-				   		<strong>Board</strong> <select id="boardSelectMobile"><option value="v">/v/ - Video Games</option><option value="2">/2/ - Test Board 2</option><option value="aco">/3/ - Test Board 3</option></select> 
+				   		<strong>Board</strong> 
+				   		<select id="boardSelectMobile">
+				   			<option value="v">/v/ - Video Games
+				   			</option>
+				   			<option value="2">/2/ - Test Board 2
+				   			</option>
+				   			<option value="aco">/3/ - Test Board 3</option>
+				   		</select> 
 				   </div>
-				<!-- the stuff below may be deleted but i may play with it-->
+				<!-- -->
 				 <span class="custom-menu-ctrl">[<a data-cm-edit="" title="Edit Menu" href="#">Edit</a>]
 				 </span>
+
 				</span>
-				<span id="navtopright">[<a href="javascript:void(0);" id="settingsWindowLink">Settings</a>] [<a href="" target="_top">Home</a>]</span>
+				<span id="navtopright">
+					[<a href="javascript:void(0);" id="settingsWindowLink">Settings</a>]
+					[<a href="" target="_top">Home</a>]
+				</span>
 			</div>
 		</div>
 			<div class="boardBanner"> 
@@ -41,24 +47,12 @@ be pretty straight forward once i am there-->
 
 					</div> 
 			</div>
-
+<!--where the start a new thread ..mogul? will be referenced -->
 			<div id="togglePostFormLink" class="desktop">
-
-				[<a href="#">Start a New Thread</a>]
+<!-- making a new thread html doc for this in particular -->
+				[<a href="/newthread">Start a New Thread</a>]
 
 			</div>
-			
-		<div class="boardBanner"> 
-
-			<div id="bannerCnt" class="title desktop" data-src="something.jpg">
-				<img id="vBanner" alt="hellovord" src="https://www.petfinder.com/wp-content/uploads/2012/11/91615172-find-a-lump-on-cats-skin-632x475.jpg">
-			</div> 
-
-				<div class="boardTitle">/v/ - Video Games
-				
-				</div>
-
-		</div>
 
 		<div id="content">
 			<div id="ctrl">
@@ -258,7 +252,50 @@ be pretty straight forward once i am there-->
 					<div class="teaser">Thread will generate here
 					</div>
 			</div>
+		<div>
+			<hr>
+			<span class="navLinks navLinksBottom mobilebtn">
 
+				<span class="btn-wrap">
+					<a href="./" class="button">Return</a>
+				</span> 
+
+				<span class="btn-wrap">
+					<a href="./archive" class="button">Archive</a>
+				</span> 
+
+				<span id="totop" class="btn-wrap">
+					<span class="button">Top</span>
+				</span> 
+
+				<span class="btn-wrap">
+						<a href="./catalog" class="button">Refresh</a>
+				</span>
+
+			</span>
+		</div>
+
+		<div id="absbot" class="absBotText">
+			<div class="mobile">
+				<span id="disable-mobile">
+					[<a href="javascript:disableMobile();">Disable Mobile View / Use Desktop Site</a>]
+						<br>
+						<br>
+				</span>
+				<span id="enable-mobile">
+					[<a href="javascript:enableMobile();">Enable Mobile View / Use Mobile Site</a>]
+						<br>
+						<br>
+					</span>
+				</div>
+				<span class="absBotDisclaimer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
+				</span>
+				<div id="footer-links">
+					<a href="nopageyet" target="_blank">About</a> • 
+					<a href="nopageyet" target="_blank">Feedback</a> • 
+					<a href="nopageyet" target="_blank">Contact</a>
+				</div>
+			</div>
 
 		<!--<div class="container-fluid">
 
