working on js files and finding a fix for the css not being applied

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Forum-Catalog</title>
 	<link rel="stylesheet" type="text/css" href="../../public/assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">  
 </head>
 
 	<body id ="bodyBackground" class="forumCatalogPage">
@@ -51,7 +52,9 @@
 			<div id="togglePostFormLink" class="desktop">
 <!-- making a new thread html doc for this in particular -->
 				[<a href="/newthread">Start a New Thread</a>]
-
+				<div class="col-md-2">
+        <a class="btn btn-default" href="/newthread">Start a New Thread</a>
+      </div>
 			</div>
 
 		<div id="content">
@@ -71,7 +74,9 @@
 			</div>
 		</div>
 		<hr>
-		<div id="threads" class="extended-small">
+		<div id="thread-container" class="extended-small">
+			<!-- make thread gen as such -->
+
 			<div id ="thread-1" class="thread">
 				<a href=""><!-- this will be where we link our thread somehow -->
 					<img alt id="" class="thumb"
@@ -90,168 +95,8 @@
 					<div class="teaser">Thread will generate here
 					</div>
 			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
-			<div id ="thread-1" class="thread">
-				<a href=""><!-- this will be where we link our thread somehow -->
-					<img alt id="" class="thumb"
-					width="147" height="150" src = "https://atwar-game.com/images/screenshots/17c.jpg" data id ="">
-				</a>
-
-				<div title="(R)eplies / (I)mage Replies" id="" class="meta">R: 
-					<b>
-						</b> 
-							/ I: 
-						<b>
-					</b>
-					<a href="#" class="postMenuBtn" title="Thread Menu" data-post-menu="">▶
-					</a>
-				</div>
-					<div class="teaser">Thread will generate here
-					</div>
-			</div>
+			<!-- -->
+			 
 		<div>
 			<hr>
 			<span class="navLinks navLinksBottom mobilebtn">
@@ -295,10 +140,32 @@
 					<a href="nopageyet" target="_blank">Feedback</a> • 
 					<a href="nopageyet" target="_blank">Contact</a>
 				</div>
-			</div>
+		</div>
 
+
+ <div class="container">
+    <div class="row top-30">
+      <div class="col-md-4">
+        <div class="form-group">
+          <select class="form-control" id="category">
+            <option selected value="">All Categories</option>
+            <option value="Personal">Personal</option>
+            <option value="Product Review">Product Review</option>
+            <option value="Political">Political</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <a class="btn btn-default" href="/cms">New Post</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 blog-container">
+      </div>
+    </div>
+  </div>
 		<!--<div class="container-fluid">
-
+		
 			<div class='row'>
 				<div class='col-md-12 text-center' id='header'>
 					<h4>almsdf</h4>
@@ -315,5 +182,8 @@
 
 		<div id="theme" class="panel" style="top: 60px;"><div class="panelHeader">Settings<span id="theme-close" class="icon closeIcon" title="Close"></span></div>  <h4>Options</h4>  <ul class="clickset">    <li class="desktop"><label><input id="theme-nobinds" type="checkbox"> Disable keybinds</label></li>    <li><label><input id="theme-nospoiler" type="checkbox"> Don't spoiler images</label></li>    <li><label><input id="theme-newtab" type="checkbox"> Open threads in a new tab</label></li>    <li class="desktop"><label><input id="theme-tw" type="checkbox"> Thread Watcher</label></li>    <li class="desktop"><label><input id="theme-ddn" type="checkbox"> Use drop-down navigation</label></li>  </ul>  <h4 class="desktop">Shortcuts</h4>  <ul class="clickset desktop">    <li><kbd>R</kbd> — Refresh current page</li>    <li><kbd>X</kbd> — Reorder threads</li>    <li><kbd>S</kbd> — Open search box, <kbd>Esc</kbd> to close</li>    <li><kbd>Shift</kbd> <kbd title="Left Mouse Button">LMB</kbd> — Hide threads</li>    <li><kbd>Alt</kbd> <kbd title="Left Mouse Button">LMB</kbd> — Pin threads</li>    <li><kbd title="Right Mouse Button">RMB</kbd> — Threads context menu (Firefox only)</li>  </ul>  <h4>Custom CSS</h4>  <textarea id="theme-css" rows="4" cols="45"></textarea>  <div id="theme-btns">    <span id="theme-msg" style="display: none;"></span>    <div class="center"><button id="theme-save">Save Settings</button></div>  </div></div>
 	-->
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
+  <script src="../../public/assets/js/thread.js" type="text/javascript"></script>
+
 	</body>
 </html>
