--- a/views/layouts/login.html
+++ b/views/layouts/login.html
@@ -30,7 +30,7 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
-        signInSuccessUrl: 'success.html',
+        signInSuccessUrl: 'main',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
