--- a/views/layouts/newthread.html
+++ b/views/layouts/newthread.html
@@ -76,6 +76,30 @@
 				<td data-utc="1493903967" class="blotter-date">
 					05/04/17
 				</td>
-				
+			
+
+
+			<div class="col-md-6 col-md-offset-3">
+				<form id="cms">
+					<div class="form-group">
+						<label for="title">Title:</label>
+						<input type="text" class="form-control" id="title">
+						<br />
+						<label for="body">Body:</label>
+						<textarea class="form-control" rows="10" id="body"></textarea>
+						<div class="form-group">
+							<label for="category">Select Category:</label>
+							<select class="form-control" id="category">
+						    <option value="Personal">Personal</option>
+						    <option value="Product Review">Product Review</option>
+						    <option value="Political">Political</option>
+  						</select>
+						</div>
+						<br />
+						<button type="submit" class="btn btn-success submit">Submit</button>
+					</div>
+				</form>
+			</div>
+			<script src="/public/assets/js/newthread.js" type="text/javascript"></script>
 </body>
 </html>
