--- a/views/layouts/success.html
+++ b/views/layouts/success.html
@@ -84,7 +84,7 @@
   </head>
   <body>
     <h1>Welcome to our Forum App</h1>
-    <button href="main.html">Take me to the site!</button>
+    <button href="/main">Take me to the site!</button>
     <div id="sign-in-status"></div>
     <div id="sign-in"></div>
     <div id="account-details"></div>
