working on the newthread.js

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -20,8 +20,8 @@
 				   "]"
 				   <div class="boardSelect"> 
 				   		<strong>Board</strong> 
-				   		<select id="boardSelectMobile">
-				   			<option value="v">/v/ - Video Games
+				   		<select id="boardSelect">
+				   			<option value="v" href="main">/v/ - Video Games
 				   			</option>
 				   			<option value="2">/2/ - Test Board 2
 				   			</option>
@@ -137,27 +137,6 @@
 		</div>
 
 
- <div class="container">
-    <div class="row top-30">
-      <div class="col-md-4">
-        <div class="form-group">
-          <select class="form-control" id="category">
-            <option selected value="">All Categories</option>
-            <option value="Personal">Personal</option>
-            <option value="Product Review">Product Review</option>
-            <option value="Political">Political</option>
-          </select>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <a class="btn btn-default" href="/cms">New Post</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 blog-container">
-      </div>
-    </div>
-  </div>
 		<!--<div class="container-fluid">
 		
 			<div class='row'>
@@ -177,9 +156,7 @@
 		<div id="theme" class="panel" style="top: 60px;"><div class="panelHeader">Settings<span id="theme-close" class="icon closeIcon" title="Close"></span></div>  <h4>Options</h4>  <ul class="clickset">    <li class="desktop"><label><input id="theme-nobinds" type="checkbox"> Disable keybinds</label></li>    <li><label><input id="theme-nospoiler" type="checkbox"> Don't spoiler images</label></li>    <li><label><input id="theme-newtab" type="checkbox"> Open threads in a new tab</label></li>    <li class="desktop"><label><input id="theme-tw" type="checkbox"> Thread Watcher</label></li>    <li class="desktop"><label><input id="theme-ddn" type="checkbox"> Use drop-down navigation</label></li>  </ul>  <h4 class="desktop">Shortcuts</h4>  <ul class="clickset desktop">    <li><kbd>R</kbd> — Refresh current page</li>    <li><kbd>X</kbd> — Reorder threads</li>    <li><kbd>S</kbd> — Open search box, <kbd>Esc</kbd> to close</li>    <li><kbd>Shift</kbd> <kbd title="Left Mouse Button">LMB</kbd> — Hide threads</li>    <li><kbd>Alt</kbd> <kbd title="Left Mouse Button">LMB</kbd> — Pin threads</li>    <li><kbd title="Right Mouse Button">RMB</kbd> — Threads context menu (Firefox only)</li>  </ul>  <h4>Custom CSS</h4>  <textarea id="theme-css" rows="4" cols="45"></textarea>  <div id="theme-btns">    <span id="theme-msg" style="display: none;"></span>    <div class="center"><button id="theme-save">Save Settings</button></div>  </div></div>
 	-->
 	<style media="screen" type="text/css">
-
-	/*note that this styling is more for visual representation */
-/* i will be using it as reference for when hbars is rdy*/
+/* hard coded the css as ahot fix*/
 html{-moz-text-size-adjust:100%;
 	-webkit-text-size-adjust:100%;
 	-ms-text-size-adjust:100%;
@@ -347,8 +324,9 @@ img.bottomad,.bottomad>div,.bottomad a img{width:728px;height:90px;max-width:100
   }
 
 	</style>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-  <script src="../../public/assets/js/thread.js" type="text/javascript"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
+<script src="../public/assets/js/thread.js" type="text/javascript"></script>
 
 	</body>
 </html>
